--- a/package.json
+++ b/package.json
@@ -17,6 +17,16 @@
   },
   "homepage": "https://github.com/otcamargo/core-api#readme",
   "devDependencies": {
-    "ts-node": "^9.1.1"
+    "@types/cors": "^2.8.9",
+    "@types/express": "^4.17.11",
+    "cors": "^2.8.5",
+    "ts-node": "^9.1.1",
+    "ts-node-dev": "^1.1.1",
+    "typescript": "^4.1.4"
+  },
+  "dependencies": {
+    "express": "^4.17.1",
+    "knex": "^0.21.17",
+    "sqlite3": "^5.0.1"
   }
 }
