--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Core api to handle basic stuff in the todo app 2.0 project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "ts-node-dev --ignore-watch node_modules src/server.ts",
+    "knex:migrate": "knex --knexfile knexfile.ts migrate:latest",
+    "knex:seed": "knex --knexfile knexfile.ts seed:run"
   },
   "repository": {
     "type": "git",
