--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   },
   "dependencies": {
     "express": "^4.17.1",
-    "knex": "^0.21.17",
-    "sqlite3": "^5.0.1"
+    "pg": "^8.5.1",
+    "typeorm": "^0.2.31"
   }
 }
