--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "1.0.0",
   "description": "Core api to handle basic stuff in the todo app 2.0 project",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "dev": "ts-node-dev --ignore-watch node_modules src/server.ts",
     "knex:migrate": "knex --knexfile knexfile.ts migrate:latest",
-    "knex:seed": "knex --knexfile knexfile.ts seed:run"
+    "knex:seed": "knex --knexfile knexfile.ts seed:run",
+    "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
   },
   "repository": {
     "type": "git",
@@ -27,6 +29,7 @@
     "typescript": "^4.1.4"
   },
   "dependencies": {
+    "class-transformer": "^0.4.0",
     "express": "^4.17.1",
     "pg": "^8.5.1",
     "typeorm": "^0.2.31"
