--- a/package.json
+++ b/package.json
@@ -21,16 +21,23 @@
   },
   "homepage": "https://github.com/otcamargo/core-api#readme",
   "devDependencies": {
-    "@types/cors": "^2.8.9",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/body-parser": "^1.19.0",
+    "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
+    "@types/helmet": "^4.0.0",
+    "@types/jsonwebtoken": "^8.5.0",
     "cors": "^2.8.5",
     "ts-node": "^9.1.1",
     "ts-node-dev": "^1.1.1",
     "typescript": "^4.1.4"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "class-transformer": "^0.4.0",
     "express": "^4.17.1",
+    "helmet": "^4.4.1",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.5.1",
     "typeorm": "^0.2.31"
   }
