--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.4.0",
+    "class-validator": "^0.13.1",
     "express": "^4.17.1",
     "helmet": "^4.4.1",
     "jsonwebtoken": "^8.5.1",
