--- a/ormconfig.json
+++ b/ormconfig.json
@@ -5,6 +5,7 @@
   "username": "todo-app",
   "password": "123456",
   "database": "todo-app-db",
+  "schema": "public",
   "synchronize": true,
   "logging": false,
   "entities": [
@@ -14,6 +15,7 @@
     "src/migration/*.ts"
   ],
   "cli": {
+      "entitiesDir": "src/entity",
       "migrationsDir": "src/migration"
   }
 }
